fix horizontal scroll issue on mobile

--- a/src/app/static/css/base.css
+++ b/src/app/static/css/base.css
@@ -14,14 +14,15 @@
     --light: #eafaff;
 }
 
-body {
+html, body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #fcfcfc;
     color: var(--dark-text);
+    overflow-y: scroll;
     overflow-x: hidden;
-
+    max-width: 100%;
 }
 
 a {
